Styled the scrollbar. Fixes #27

--- a/scss/colors/_dark.scss
+++ b/scss/colors/_dark.scss
@@ -8,6 +8,10 @@ body.theme-dark {
     --link-text: #8f9bb3;
     --link-text-hover: #fff;
 
+    --scrollbar-bg: transparent;
+    --scrollbar-thumb-bg: #222836;
+    --scrollbar-thumb-border: #454c68;
+
     --splash-bg: #454c68;
     --splash-error-text: #f00;
     --splash-progress-empty-bg: #646464;
