--- a/scss/colors/_light.scss
+++ b/scss/colors/_light.scss
@@ -8,6 +8,10 @@ body.theme-light {
     --link-text: #222b45;
     --link-text-hover: #000;
 
+    --scrollbar-bg: transparent;
+    --scrollbar-thumb-bg: #fff;
+    --scrollbar-thumb-border: #eaeef6;
+
     --splash-bg: #eaeef6;
     --splash-error-text: #f00;
     --splash-progress-empty-bg: #b5b5b5;
