--- a/scss/layout/content/_content.scss
+++ b/scss/layout/content/_content.scss
@@ -7,4 +7,18 @@
     * {
         overflow-y: initial;
     }
+
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: var(--scrollbar-bg);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-thumb-bg);
+        border-radius: 0px;
+        border: 3px solid var(--scrollbar-thumb-border);
+    }
 }
